# bollywood-movie-picker

./: .gitignore  Bollywood_Dumb_Charades.ipynb  app.py  package-lock.json  package.json  pyproject.toml  refresh_list.py  requirements.txt  serverless.yml
static/: movies.csv
templates/: movie_view.html
