[tool.poetry]
name = "bollywood-movie-picker"
version = "0.1.0"
description = ""
authors = ["Mihir Kurdekar <mihir.kurdekar@gmail.com>"]
readme = "README.md"
packages = [{include = "bollywood_movie_picker"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
jinja2 = "^3.1.2"
pandas = "1.1"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
gunicorn = "20.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
